fix: Firefox could have uneven column heights because of margin top/bottom auto

--- a/css/styles.css
+++ b/css/styles.css
@@ -318,7 +318,7 @@ nav h1 {
     }
 
     #restaurants-list li {
-      margin: auto;
+      margin: 0 auto;
       min-width: 270px;
     }
   }
